<resources>
    <string name="app_name">Sushilito</string>
    <string name="next">Next</string>
    <string name="sweeto">Sushilito</string>
    <string name="default_web_client_id">Your WEB API KEY</string>
    <string name="our_menu">Our menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Sushilito">\n</string>
    <string name="mesas">Mesas</string>
    <string name="rollos">Rollos</string>
    <string name="platillos">Platillos</string>
    <string name="bebidas">Bebidas</string>
    <string name="sopas">Sopas</string>
    <string name="welcome_text">Bienvenido a sushilito</string>
    <string name="welcome_description">Sushilito’s es un restaurante de Sushi y comida japonesa ubicados en Ciudad Obregón; con un concepto diferente y un menú lleno de rollos y platillos que no encontrarás en otro lugar</string>
    <string name="button_start">Comenzar</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">Acepto los terminos del restaurante de sushilito</string>
    <string name="sing_in">Sing in</string>
    <string name="register">Register</string>

</resources>